Bug 136374 - esc throws away *all* edits of all images -> bad!
Summary: esc throws away *all* edits of all images -> bad!
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Annotation Dialog (other bugs)
Version First Reported In: SVN (KDE3 branch)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-27 10:26 UTC by fleury
Modified: 2007-06-09 23:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
AnnotationDialog-better-message-on-esc.patch (644 bytes, patch)
2007-05-10 23:55 UTC, Jan Kundrát
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fleury 2006-10-27 10:26:45 UTC
Version:           SVN (using KDE 3.5.5, Gentoo)
Compiler:          gcc version 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.17-gentoo-r7

When annotating images (CTRL-1), I typically make some mistake at some point. The popup message, however, does not hint at the fact that, if accepted, *all* edits from all currently selected images will be thrown away. 

The text says: "Changes made to image info, really cancel?", which in my case I interpreted as "the edits of the current image will be deleted", but it actually just junked my last hour's worth of annotations.

My suggestion is that
1- you reformulate the text to hint at the fact that a lot of information may be lost
2- the ESC key (or any key for that matter) does not map to a big information dismissal. Such destructive operations should not be acessible easily from the keyboard.
3- ESC should be mapped to "clear info for current image", with a hidable popup info box.
Comment 1 Shawn Willden 2007-05-10 17:43:21 UTC
Perhaps it would be a good idea to improve the information dialog, to make it clearer, but if you've made a mistake why would you throw away your edits, rather than just fixing them?  It seems to me that the only reason I use escape is when I  discovered I've made bad edits to a whole bunch of images and don't have time to fix them.  In other words, the only time I use escape is when I want the current behavior.
Comment 2 fleury 2007-05-10 22:27:01 UTC
Probably because I use lots of different software, and they tend to overwarn when deleting a big chunk of user-entered information.
Learning this the hardway is certainly notthe best way to push this knowledge onto users, so therefore I would say that improving the dialog message to clearly indicate that all is lost is both simple and helpful.

In many circumstances, ESC is used to clear the last just entered field (I have no hard numbers, but my habits talk here...), and therefore I suggest it should be treated with care.
Comment 3 Jan Kundrát 2007-05-10 23:55:27 UTC
Created attachment 20531 [details]
AnnotationDialog-better-message-on-esc.patch

What about the following patch?
Comment 4 fleury 2007-05-14 23:10:48 UTC
Yes, I think this makes it much clearer. At almost no cost :-)
Comment 5 Jan Kundrát 2007-06-09 23:53:57 UTC
SVN commit 673318 by jkt:

Make warning when closing the annotation dialog with unsaved changes more explicit

BUG: 136374


 M  +1 -1      Dialog.cpp  


--- branches/extragear/kde3/graphics/kphotoalbum/AnnotationDialog/Dialog.cpp #673317:673318
@@ -663,7 +663,7 @@
 void AnnotationDialog::Dialog::reject()
 {
     if ( hasChanges() ) {
-        int code =  KMessageBox::questionYesNo( this, i18n("<p>Changes made to current item, really cancel?</p>") );
+        int code =  KMessageBox::questionYesNo( this, i18n("<p>Some items were changed. Do you really want to undo all recent edits for each affected image?</p>") );
         if ( code == KMessageBox::No )
             return;
     }