Make warning when closing the annotation dialog with unsaved changes more explicit

BUG: 136374

svn path=/branches/extragear/kde3/graphics/kphotoalbum/; revision=673318